# thunder-cli

./: .clinerules  .cursorrules  .gitignore  .golangci.yml  .goreleaser.linux-windows.yaml  .goreleaser.macos-only.txt  .goreleaser.macos.yaml  .goreleaser.s3-only.yaml  .goreleaser.ubuntu.yaml  .goreleaser.windows.yaml  .goreleaser.yaml  .thunder.example.json  .windsurfrules  AGENTS.md  LICENSE  Makefile  README.md  YUBIKEY_SETUP.md  commands.md  go.mod  go.sum  latest.json  main.go  main_test.go  old-README.md  old.goreleaser.macos.yaml  old.goreleaser.windows.yaml  quickstart.mdx
.devin/: skillfile.md
.github/: copilot-instructions.md  dependabot.yml
__inactive_commands__/: preset.go  preset_tui.go
api/: client.go  client_test.go  types.go
cmd/: add_key.go  connect.go  connect_test.go  create.go  create_test.go  delete.go  delete_test.go  error_types.go  errors.go  help.go  helpers.go  login.go  login_test.go  modify.go  modify_test.go  ports.go  ports_forward.go  ports_list.go  preset.go  print.go  root.go  root_test.go  scp.go  scp_test.go  selfupdate.go  selfupdate_test.go  sentry_middleware.go  snapshot.go  snapshot_create.go  snapshot_delete.go  snapshot_list.go  ssh_keys.go  start.go  status.go  status_plain.go  status_test.go  stop.go  update.go  update_helpers.go  update_test.go  (+1 more)
old-yaml/: .goreleaser.linux-windows.yml  .goreleaser.macos-only.yml  .goreleaser.txt  .goreleaser.yml  publish-pypi.yml
operations/: authentication.mdx  creating-instances.mdx  (+7 more)
packaging/python/: pyproject.toml
packaging/python/src/tnr_installer/: __init__.py  wrapper.py
(+152 files in other folders)
